--- a/src/project/main/templates/main/intron.html
+++ b/src/project/main/templates/main/intron.html
@@ -3,24 +3,126 @@
 {% block home_page %}
 
     {% load staticfiles %}
-    <div id="intron_div" intron_id="{{ intron.id }}" intron_coord="{{ coord }}">
-        <h2>Intron {{ intron.chr }}:{{ intron.start }}-{{ intron.end }}, Gene: {{ intron.gene }}</h2>
+    <style>
+        .intron_values {
+            background-color: aliceblue;
+            border-style: solid;
+            border-color: #97b0c8;
+            border-width: 1px;
+            width: 237px;
+            padding: 10px 20px;
+        }
+
+        .intron_values_title {
+            text-align: left;
+            font-weight: bold;
+            padding-right: 20px;
+        }
+
+        .intron_values_val {
+            text-align: left;
+        }
+    </style>
+
+    <div id="intron_div" intron_id="{{ intron.id }}" intron_coord="{{ coord }}" intron_chr="{{ chr }}">
+        <h2>Intronic region: {{ intron.chr }}:{{ intron.start }}-{{ intron.end }}</h2>
+        <div class="table intron_values">
+            <div class="table_row">
+                <div class="table_cell intron_values_title">Gene</div>
+                <div class="table_cell intron_values_val">{{ intron.gene }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">P-Value</div>
+                <div class="table_cell intron_values_val">{{ intron.pvalue }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">TPM1</div>
+                <div class="table_cell intron_values_val">{{ intron.TPM1 }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">TPM2</div>
+                <div class="table_cell intron_values_val">{{ intron.TPM2 }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">Log2(FC)</div>
+                <div class="table_cell intron_values_val">{{ intron.fc }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">R1</div>
+                <div class="table_cell intron_values_val">{{ intron.r1 }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">R2</div>
+                <div class="table_cell intron_values_val">{{ intron.r2 }}</div>
+            </div>
+            <div class="table_row">
+                <div class="table_cell intron_values_title">RefSeq Acc</div>
+                <div class="table_cell intron_values_val">{{ chr }}</div>
+            </div>
+        </div>
         <div id="SV0" class="SeqViewerApp"></div>
     </div>
 
     <script>
-        function loadseqviwer() {
-            "use strict";
-            console.log("loadSVdata");
-            var app = SeqView.App.findAppByDivId('SV0') || new SeqView.App('SV0');
-            var coord = $("#intron_div").attr("intron_coord");
-            console.log("Coord: " + coord)
-            app.reload("appname=testapp&amp;id=NC_000001.10&amp;v=" + coord);
-        }
-
         window.onload = function () {
             console.log("Ready function");
             loadseqviwer();
         };
     </script>
 {% endblock home_page %}
+
+{% block right_side_bar %}
+    <div id="right-sidebar" style="background-color: aliceblue;padding-top: 10px;padding-bottom: 10px;">
+        <h2 style="margin-left: 20px;">Condition {{ intron.exp.condition1.name }} samples</h2>
+
+        <div style="font-size: 90%; height: 400px;overflow:auto;">
+            <input type="checkbox" id="cond1_sample_all" style="margin-left: 44px;" checked/> Select all
+            <ol style="margin-top: 0px;">
+                {% for s in samples1 %}
+                    <li>
+                        <input type="checkbox" class="cond1_samples" id="cond1_sample_{{ s.id }}" checked/> {{ s.name }}
+                    </li>
+                {% empty %}
+                    -- None --
+                {% endfor %}
+            </ol>
+        </div>
+        <hr>
+        <h2 style="margin-left: 20px;">Condition {{ intron.exp.condition2.name }} samples</h2>
+
+        <div style="font-size: 90%; height: 400px;overflow:auto;">
+            <input type="checkbox" id="cond2_sample_all" style="margin-left: 44px;"/> Select all
+            <ol style="margin-top: 0px;">
+                {% for s in samples2 %}
+                    <li>
+                        <input type="checkbox" class="cond2_samples" id="cond2_sample_{{ s.id }}"/> {{ s.name }}
+                    </li>
+                {% empty %}
+                    -- None --
+                {% endfor %}
+            </ol>
+        </div>
+    </div>
+    <script>
+        $('#cond1_sample_all').click( function() {
+            console.log('Selecting all cond1');
+            $('.cond1_samples').each(function (i, obj) {
+                if (obj.checked == true){
+                    obj.checked = false;
+                }else{
+                    obj.checked = true;
+                }
+            });
+        });
+        $('#cond2_sample_all').click( function() {
+            console.log('Selecting all cond2');
+            $('.cond2_samples').each(function (i, obj) {
+                if (obj.checked == true){
+                    obj.checked = false;
+                }else{
+                    obj.checked = true;
+                }
+            });
+        });
+    </script>
+{% endblock right_side_bar %}
