--- a/src/project/main/templates/main/_base.html
+++ b/src/project/main/templates/main/_base.html
@@ -11,7 +11,7 @@
 
     {% compress css %}
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-        <script type="text/javascript" src="https://www.ncbi.nlm.nih.gov/projects/sviewer/js/sviewer.js"></script>
+        <script type="text/javascript" src="https://dev.ncbi.nlm.nih.gov/projects/sviewer/js/sviewer.js"></script>
         <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'jquery-ui/jquery-ui.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'underscore/underscore-min.js' %}"></script>
