New changes and resources files

--- a/src/project/main/templates/main/_base.html
+++ b/src/project/main/templates/main/_base.html
@@ -19,8 +19,9 @@
         <script type="text/javascript" src="{% static 'd3-tip/index.js' %}"></script>
 
         <script>
-            var service_path = "{% url 'diffexpir:service' %}"
-            var intron_path = "{% url 'diffexpir:intron' %}"
+            var static_bam_path = "{% static 'main/bam/' %}";
+            var service_path = "{% url 'diffexpir:service' %}";
+            var intron_path = "{% url 'diffexpir:intron' %}";
         </script>
 
         <script type="text/javascript" src="{% static 'main/js/utils.js' %}"></script>
